--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    background: #ededed;
+    background: #ededed ;
 }
 
 input, button {
@@ -22,6 +22,7 @@ input, button {
     text-align: center;
 }
 
+
 .content {
     overflow: hidden;
     position: absolute;
@@ -30,7 +31,7 @@ input, button {
     width: 900px;
     height: 550px;
     margin: -300px 0 0 -450px;
-    background: #fff;
+    background: aliceblue;
 }
 
 .form {
@@ -51,7 +52,7 @@ input, button {
     width: 900px;
     height: 100%;
     padding-left: 260px;
-    background: #fff;
+    background: aliceblue;
     transition: -webkit-transform 0.6s ease-in-out;
     transition: transform 0.6s ease-in-out;
     transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
@@ -219,7 +220,7 @@ label {
 }
 
 label span {
-    font-size: 12px;
+    font-size: 17px;
     color: #909399;
     text-transform: uppercase;
 }
@@ -237,7 +238,7 @@ input {
 .forgot-pass {
     margin-top: 15px;
     text-align: center;
-    font-size: 12px;
+    font-size: 15px;
     color: #cfcfcf;
 }
 
