--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     background: #ededed ;
+    background-image: url("../images/d85a1ac21730fe8e7afc756092abb166.jpg");
+    background-size: cover;
 }
 
 input, button {
