更改session的存放位置...

--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,7 @@ a {
 }
 
 .icon-news {
-    background: url(/images/icon.png) no-repeat;
+    background: url(../images/icon.png) no-repeat;
     width: 15px;
     height: 15px;
     display: inline-block;
