--- a/css/home.css
+++ b/css/home.css
@@ -117,7 +117,7 @@
 
 .ydc-content-slide {
     position: relative;
-    width: 1180px;
+    width: 65%;
     margin: 20px auto;
     -webkit-transform: translate3d(0,30px,0);
     transform: translate3d(0,30px,0);
@@ -332,7 +332,7 @@
     font-size: 14px;
     height: 44px;
     line-height: 45px;
-    width: 111px;
+    width: 150px;
     text-align: center;
     cursor: pointer;
     background: -moz-linear-gradient(top, #eee, #ddd);
