--- a/css/core.css
+++ b/css/core.css
@@ -192,6 +192,7 @@ h2, h3 {
 
 textarea{
 	outline:none;
+	border: 5px #ebebeb solid;
 }
 
 textarea:focus{
@@ -209,8 +210,7 @@ input:focus,textarea:focus {
 
 	outline: none;
 
-	border: 1px
-	solid  #ff5f5f;
+	border: 2px solid black;
 
 }
 
