--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -2,6 +2,10 @@ root {
     display: block;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 html, body, div, label, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, p, blockquote, th, td, img, textarea {
     border: 0;
     margin: 0;
